[package]
name = "robochess"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust_gpiozero = "0.2.1"
websocket = { version = "0.26.2", features = ["sync"] }
chers = { git = "https://github.com/paga2004/chers" }
